ingress-path-based/managment-app.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:  
    metadata:
      labels: 
        app: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080           
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp
spec:
  selector:
    app: usermgmt-webapp
  ports:
    - name: http
      port: 80 #ClusterIP service port
      targetPort: 8080 #Container port
  type: ClusterIP          

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: k8s-app-dev-mysql.mysql.database.azure.com
